# MemCore

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  README.md  ROADMAP.md  SPEC.md  biome.json  docker-compose.yml  env.example  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json  tsup.config.ts  vitest.config.ts
.github/workflows/: ci.yml  evals.yml
db/: reset.ts  schema.sql
evals/: RESULTS.md  baseline.json  baseline.test.ts  baseline.ts  grader.test.ts  grader.ts  metrics.ts  runner.ts  types.ts
evals/cases/: abstain.jsonl  knowledge_update.jsonl  multi_session.jsonl  single_session_recall.jsonl  temporal_reasoning.jsonl
migrations/: env.py
migrations/versions/: 0001_initial.py
scripts/: create-vector-index.ts  local-eval.ts  minimax-eval.ts  reingest.ts  smoke.ts  test-client.ts
src/: config.py  config.test.ts  config.ts  errors.test.ts  errors.ts  index.ts  logging.ts  memcore.local.test.ts  memcore.ts  version.test.ts  version.ts
src/api/: health.py  main.py  main.ts  server.test.ts  server.ts
src/db/: pool.ts  session.py  vector.test.ts  vector.ts
src/errors/: __init__.py
src/ingestion/: chunker.test.ts  chunker.ts  conflict-detector.test.ts  conflict-detector.ts  contextualizer.test.ts  contextualizer.ts  extractor.test.ts  extractor.ts  pipeline.ts
src/llm/: __init__.py  client.py  client.test.ts  client.ts  cost-tracker.test.ts  cost-tracker.ts  cost_tracker.py  cost_tracker_test.py  embedder.py  embedder.test.ts  embedder.ts  index.ts  openai-embedder.test.ts  openai-embedder.ts  openai-llm-client.test.ts  openai-llm-client.ts  stub-embedder.test.ts  stub-embedder.ts  types.py  types.test.ts  types.ts
src/logging/: __init__.py
(+37 files in other folders)
